update seminar and add hw2

--- a/Homework1/index.html
+++ b/Homework1/index.html
@@ -6,44 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <!-- Добавить меню сайта (Меню сайта должно быть на каждой странице, оно должно быть одинаковым): ###### a. Главная 
-    ###### b. Каталог 
-    ###### c. Контакты -->
+    <ul><a class="nav_link" href="index.html">Главная</a></ul>
+    <ul><a class="nav_link" href="catalog/catalog.html">Каталог</a></ul>
+    <ul><a class="nav_link" href="#">Контакты</a></ul>
 
-    <ul><a href="index.html">Главная</a></ul>
-    <ul><a href="catalog/catalog.html">Каталог</a></ul>
-    <ul><a href="#">Контакты</a></ul>
 
-    <!--Создать заголовок h1 с текстом “Главная страница”.
-  -->
-    <h1>
+    <h1 class="heading">
         Главная страница
     </h1>
 
-    <!-- Добавить параграф p с произвольным текстом (lorem) (используем расширение emmet уже установленное в vsc, для этого вводим lorem и нажимаем клавишу tab). -->
 
-    <p>
+    <p class="text">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores hic nobis animi magni possimus voluptates eum
         nam officiis cum est.
     </p>
 
-    <!-- Создать подзаголовок h2 с текстом “Добро пожаловать на сайт”. -->
 
-    <h2>
+    <h2 class="subtitle">
         Добро пожаловать на сайт
     </h2>
 
-    <!-- Добавить три параграф p с произвольным текстом (lorem). -->
-    <p>
+
+    <p class="text">
         Lorem ipsum dolor sit amet.
     </p>
-    <p>
+
+    <p class="text">
         Lorem ipsum dolor sit amet consectetur.
     </p>
-    <p>
+
+    <p class="text">
         Lorem ipsum, dolor sit amet consectetur adipisicing.
     </p>
 </body>
