--- a/Homework1/catalog/catalog.html
+++ b/Homework1/catalog/catalog.html
@@ -6,22 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <ul><a href="../index.html">Главная</a></ul>
-    <ul><a href="catalog.html">Каталог</a></ul>
-    <ul><a href="#">Контакты</a></ul>
+    <ul><a class="nav_link" href="../index.html">Главная</a></ul>
+    <ul><a class="nav_link" href="catalog.html">Каталог</a></ul>
+    <ul><a class="nav_link" href="#">Контакты</a></ul>
 
-    <!-- Добавить Заголовок h1 с текстом “Каталог”. -->
-
-    <h1>
+    <h1 class="heading">
         Каталог
     </h1>
 
-    <!-- Создать параграф p с произвольным текстом из 150 слов для этого вводим “lorem150” и нажимаем tab. -->
 
-    <p>
+    <p class="text">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dolorem nulla asperiores, praesentium itaque,
         architecto odit recusandae similique earum possimus explicabo inventore facilis, soluta autem corporis veniam
         quaerat enim consectetur placeat laborum atque sunt reprehenderit. Laudantium eum assumenda dolor porro
@@ -35,24 +33,18 @@
         inventore doloribus, quam qui aperiam numquam nulla eveniet aspernatur officiis magni? Sunt, rerum.
     </p>
 
-    <!-- На странице “Каталог” после заголовка h1 и параграфа p добавить ###### 
-        a. Изображение товара ###### 
-        b. Название товара ###### 
-        c. Описание товара
-    
-    Добавить 3 таких товара на страницу каталога (не следует добавлять более 3-х товаров) -->
 
-    <p>
+    <p class="text">
         Косметика<br>
         <img src="../img/cosmetic.jpg" alt="Косметика" width="300"><br>
     <figcaption>Lorem, ipsum dolor.</figcaption>
     </p>
-    <p>
+    <p class="text">
         Парфюм<br>
         <img src="../img/parfume.jpg" alt="parfume" width="300"><br>
     <figcaption>Lorem ipsum dolor sit amet consectetur.</figcaption>
     </p>
-    <p>
+    <p class="text">
         Туалетный набор<br>
         <img src="../img/tbag.jpg" alt="tbag" width="300"><br>
     <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur in minus non aut reprehenderit.
