--- a/Seminar1/application.html
+++ b/Seminar1/application.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <a href="../Seminar1/index.html#main">Главная</a>
-    <a href="../Seminar1/info/about.html#about_me">Обо мне</a>
-    <a href="application.html"></a>
-    <h1>
+    <a class="href" href="../Seminar1/index.html#main">Главная</a>
+    <a class="href" href="../Seminar1/info/about.html#about_me">Обо мне</a>
+    <a class="href" href="application.html"></a>
+    <h1 class="title">
         <form action="#">
-            Ваше Имя <input type="text" placeholder="Введите Имя"><br>
-            Ваш e-mail<input type="email" placeholder="Введите email"><br>
+            Ваше Имя <input class="input__style" type="text" placeholder="Введите Имя"><br>
+            Ваш e-mail<input class="input__style" type="email" placeholder="Введите email"><br>
             <button type="submit">Отправить</button>
             <button type="reset">Cтереть форму</button>
         </form>
