--- a/Seminar1/index.html
+++ b/Seminar1/index.html
@@ -6,29 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <a href="#main">"Главная"</a><br>
-    <a href="info/about.html">"Обо мне"</a><br>
-    <a href="application.html">Заявка</a>
-    <h1 id="main">
+    <a class="href" href="#main">"Главная"</a><br>
+    <a class="href" href="info/about.html">"Обо мне"</a><br>
+    <a class="href" href="application.html">Заявка</a>
+    <h1 class="title" id="main">
         Моя первая html страница
     </h1>
-    <p>
+    <p class="text">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore fugiat error recusandae nisi, iste voluptas
         tenetur laborum id repellendus culpa?
     </p>
-    <h2>
+    <h2 class="caption">
         Заголовок 2 уровня
     </h2>
-    <p>
+    <p class="text">
         Lorem ipsum dolor sit.
     </p>
-    <p>
+    <p class="text">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, labore!
     </p>
-    <p>
+    <p class="text">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit.
     </p>
     <a href="https://www.tiktok.com/ru-RU/"><img src="../Seminar1/img/tiktok.svg" alt="Tiktok" width="30"></a>
