--- a/Seminar1/info/about.html
+++ b/Seminar1/info/about.html
@@ -6,18 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <a href="../index.html#main">"Главная"</a><br>
-    <a href="#about_me">"Обо мне"</a>
-    <a href="../application.html">Заявка</a>
+    <a class="href" href="../index.html#main">"Главная"</a><br>
+    <a class="href" href="#about_me">"Обо мне"</a>
+    <a class="href" href="../application.html">Заявка</a>
 
-    <h1 id="about_me">
+    <h1 class="title" id="about_me">
         "Обо мне"
     </h1>
-    <img src="../img/burger-with-ketchup-mustard-bottles_23-2148258388.jpg" alt="БургерКепчуг" width="150">
-    <p>
+    <img class="pic" src="../img/burger-with-ketchup-mustard-bottles_23-2148258388.jpg" alt="БургерКепчуг" width="150">
+    <p class="text">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti dolorum, dolorem modi quasi quo quia magni
         officia nostrum expedita quam porro odit sit harum laborum ratione minus explicabo. Ea ab vitae soluta eveniet
         aut fugiat labore necessitatibus nihil deserunt molestiae accusantium rem, enim libero eum alias sunt quia sit
