--- a/seminar6/index.html
+++ b/seminar6/index.html
@@ -19,7 +19,7 @@
             <a class="header__link" href="#">Contact</a>
         </div>
         <div class="top__content">
-            <h3 class="title">NEXT GENERATION PLATFORM</h3>
+            <h3 class="title">Next generation platform</h3>
             <h1 class="sub__title">Artificcial intelligence & Syber security</h1>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, doloremque tempora. At
                 nobis ipsum
