updating from mobile_version

--- a/hwsem11/index.html
+++ b/hwsem11/index.html
@@ -22,45 +22,45 @@
             </div>
             <div class="button_copy">
                 <img src="img/header_button_1.svg" alt="button_1">
-                <img src="img/header_button_2.svg" alt="button_2">
-                <img src="img/header_button_3.svg" alt="botton_3">
+                <img class="button_copy_1" src="img/header_button_2.svg" alt="button_2">
+                <img class="button_copy_2" src="img/header_button_3.svg" alt="button_3">
             </div>
 
         </div>
         <div class="top_content">
-            <img src="img/top_content_img.svg" alt="top_content">
+            <img class="top_content_img" src="img/top_content_img.svg" alt="top_content">
             <div class="rectangle">
                 <img src="img/reactangle_top_content.svg" alt="rectangle">
             </div>
             <h2 class="brand_title">
-                THE BRAND OF LUXERIOUS <span class="color_text">FASHION</span>
+                <span class="tittle_text">THE BRAND</span><br>OF LUXERIOUS <span class="color_text">FASHION</span>
             </h2>
         </div>
         <div class="block_offer">
             <div class="item for_women">
                 <p class="text">30% OFF<br><span class="color_text big_text">FOR WOMEN</span> </p>
-                <img src="img/for_women_img.svg" alt="for_women">
+                <img class="offer_img" src="img/for_women_img.svg" alt="for_women">
 
             </div>
             <div class="item for_men">
-                <img src="img/for_men_img.svg" alt="for_men">
-                <p class="text big_text">HOT DEAL<br><span class="color_text">FOR MEN</span> </p>
+                <img class="offer_img" src="img/for_men_img.svg" alt="for_men">
+                <p class="text">HOT DEAL<br><span class="color_text big_text">FOR MEN</span> </p>
             </div>
-            <div class=" item for_kids">
-                <img src="img/for_kids_img.svg" alt="for_kids">
+            <div class="item for_kids">
+                <img class="offer_img" src="img/for_kids_img.svg" alt="for_kids">
                 <p class="text">NEW ARRIVALS<br><span class="color_text big_text">FOR KIDS</span> </p>
             </div>
             <div class="item accesories">
-                <img src="img/accesories_img.svg" alt="accesories">
+                <img class="accesories_img" src="img/accesories_img.svg" alt="accesories">
                 <p class="text">LUXIROUS & TRENDY<br><span class="color_text big_text">ACCESORIES</span> </p>
             </div>
 
         </div>
+        <div class="products_title">
+            <h3 class="fetured_items">Fetured Items</h3>
+            <p class="items_text">Shop for items based on what we featured in this week</p>
+        </div>
         <div class="products">
-            <div class="products_title">
-                <h3 class="fetured_items">Fetured Items</h3>
-                <p class="items_text">Shop for items based on what we featured in this week</p>
-            </div>
             <div class="products_item">
                 <div class="product">
                     <img src="img/product_1.svg" alt="prod_1" class="product_img">
