correct buttons and hover

--- a/hwsem11/index.html
+++ b/hwsem11/index.html
@@ -17,7 +17,7 @@
     <div class="desktop_index">
         <div class="header">
             <div class="header_logo">
-                <img src="img/header_logo.svg" alt="head_logo_1">
+                <a href=""><img src="img/header_logo.svg" alt="head_logo_1"></a>
                 <img src="img/header_logo_2.svg" alt="head_logo_2">
             </div>
             <div class="button_copy">
